added css and js bootstrap

--- a/note_project/note/templates/base.html
+++ b/note_project/note/templates/base.html
@@ -9,6 +9,6 @@
     <meta name="author" content="">
     <title>{% block title %}DjangoNote - The Best Note{% endblock title %}</title>
     {% block stylesheets %}
-    <link rel="stylesheet" href="{% static 'djangonote/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'note/style.css' %}" />
     {% endblock stylesheets %}
 </head>
