--- a/note_project/note/templates/base.html
+++ b/note_project/note/templates/base.html
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+                    <a class="navbar-brand" href="{% url 'home' %}">Home</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
