--- a/note_project/note/templates/index.html
+++ b/note_project/note/templates/index.html
@@ -1,23 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
-
-
 {% block body %}
-<div class="jumbotron">
-    <h1 align='center'>Django Note!</h1>
-	<div class='container' style='padding-top:10px'>
-		<form action="" method="post">{% csrf_token %}
-		<div class="row">
-			<div class="col-md-6">
-				<input type='text' id='id_username' name='username' class='form-control' placeholder='Username' />
-			</div>
-			<div class='col-md-6'>
-				<input type='password' id='id_password' name='password' class='form-control' placeholder='Password' />
-			</div>
-		</div>
-		<br>
-		<input type="submit" value="Login" class='btn btn-primary btn-lg btn-block' />
-		</form>
 
+
+<div class="jumbotron">
+	<h1 align='center'>Notes!</h1>
 </div>
+
+
+
+<div class='col-md-12'>
+{% if notes %}
+	{% for note in notes %}
+	<h3 class="page-header">{{note.label}}</h3>
+	{{note.body|linebreaks}}
+		{% for tag in note.tags.all %}
+		{{tag}}{% if not forloop.last %} | {% endif %}
+		{% endfor %}
+	{% endfor %}
+{% else %}
+	<div class='alert alert-warning' align='center'>
+		<h3>No Notes Yet!</h3>
+	</div>
+{% endif %}
+</div>
+
+
+
 {% endblock body %}
