--- a/note_project/note/notes/templates/base.html
+++ b/note_project/note/notes/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>{% block title %}DjangoNote - The Best Note{% endblock title %}</title>
+        <label>{% block label %}DjangoNote - The Best Note{% endblock label %}</label>
         {% block stylesheets %}
         <link rel="stylesheet" href="{% static 'note/bootstrap.min.css' %}" />
         <link rel="stylesheet" href="{% static 'note/bootstrap-theme.min.css' %}" />
