--- a/note_project/note/notes/templates/notes/addnote.html
+++ b/note_project/note/notes/templates/notes/addnote.html
@@ -16,6 +16,13 @@
 	</form>
 </div>
 
-
+{% if note %}
+<div class="col-md-12" style="padding-top:15px">
+    <form action="" method="POST">{% csrf_token %}
+    <input type="hidden" name="control" value="delete" />
+    <input type="submit" value="Delete" class="btn btn-lg btn-block btn-danger" />
+    </form>
+</div>
+{% endif %}
 
 {% endblock body %}
