--- a/note_project/note/notes/templates/base.html
+++ b/note_project/note/notes/templates/base.html
@@ -2,44 +2,37 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <title>Notes App</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <label>{% block label %}DjangoNote - The Best Note{% endblock label %}</label>
+        <label>{% block label %}DjangoNote - The Best Note Taking App (Not Really){% endblock label %}</label>
         {% block stylesheets %}
-        <link rel="stylesheet" href="{% static 'notes/bootstrap.min.css' %}" />
-        <link rel="stylesheet" href="{% static 'notes/bootstrap-theme.min.css' %}" />
-        <link rel="stylesheet" href="{% static 'notes/theme.css' %}" />
+        <link rel="stylesheet" href="{% static 'notes/base.css' %}" />
         {% endblock stylesheets %}
     </head>
 
     {% block scriptload %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="{% static 'notes/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'notes/js/docs.min.js' %}"></script>
     {% endblock scriptload %}
 
     <body role="document">
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-                </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                        Navigation Bar
                         <li>
-                            <a href="{%url 'notes:index'%}">notes</a>
+                            <a class="navbar-brand" href="{% url 'home' %}">Home</a>
                         </li>
                         <li>
-                            <a href="{% url 'notes:addnote'%}">add note</a>
+                            <a href="{%url 'notes:index'%}">Notes</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'notes:addnote'%}">Add note</a>
                         </li>
                     </ul>
                 </div>
