--- a/note_project/note/notes/templates/home.html
+++ b/note_project/note/notes/templates/home.html
@@ -6,7 +6,9 @@
 <div class="jumbotron">
     <h1 align='center'>Django Note!</h1>
 	<div class='container' style='padding-top:10px'>
-		
+		<p>Welcome to this here note taking web app. I hope everything is to your liking. Click on the links in the navigation bar to go to the 
+		corresponding locations. </p>
+	</div>
 
 </div>
 {% endblock body %}
