--- a/note_project/note/notes/templates/home.html
+++ b/note_project/note/notes/templates/home.html
@@ -3,8 +3,12 @@
 
 
 {% block body %}
-<div class="jumbotron">
-    <h1 align='center'>Django Note!</h1>
+<div>
+    <div id='container'>
+    	<div id='animation'>
+    		<h1 align='center'>Django Note!</h1>
+    	</div>
+    </div>
 	<div class='container' style='padding-top:10px'>
 		<p>Welcome to this here note taking web app. I hope everything is to your liking. Click on the links in the navigation bar to go to the 
 		corresponding locations. </p>
