--- a/note_project/note/notes/static/notes/base.css
+++ b/note_project/note/notes/static/notes/base.css
@@ -19,6 +19,14 @@ p{
      text-align: center;
  }
  
- div{
-     align: center;
- }
+
+ #container {
+    margin: auto;
+    width: 200px;
+    height: 200px;
+    background: yellow;
+}
+#animate {
+    width: 50px;
+    height: 50px;
+}
