--- a/note_project/note/notes/templates/notes/addnote.html
+++ b/note_project/note/notes/templates/notes/addnote.html
@@ -3,8 +3,10 @@
 {% block body %}
 
 
-<div class="jumbotron">
-	<h1 align='center'>Create New Note!</h1>
+<div id='container'>
+    <div id='animation'>
+	    <h1 align='center'>Create New Note!</h1>
+	</div>
 </div>
 
 
