--- a/note_project/note/notes/static/notes/base.css
+++ b/note_project/note/notes/static/notes/base.css
@@ -5,7 +5,7 @@ body {
 }
 
 li{
-    text-align: left;
+    text-align: center;
 }
 
 p{
@@ -18,7 +18,9 @@ p{
  .buttons{
      text-align: center;
  }
- 
+ .notes{
+     text-align: center;
+ }
 
  #container {
     margin: auto;
